@@ -14,6 +14,8 @@
     * IMPORTANT: shifted key notation now matches Vim's behaviour. E.g. <C-a>
       and <C-A> are equivalent, to map the uppercase character use <C-S-A>.
 
+    * make :open behavior match that of :tabopen and :winopen when no argument
+      is specified
     * add extension related commands - :extadd, :extdelete, :extdisable,
       :extenable, :extensions, :extoptions
     * add '-javascript' flag to :autocommand
